syntax = "proto3";
package zetachain.zetacore.observer;

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";
import "gogoproto/gogo.proto";

enum ChainName {
  option (gogoproto.goproto_enum_stringer) = true;
  Empty = 0;
  Eth = 1;
  ZetaChain = 2;
  Btc = 3;
  Polygon = 4;
  BscMainnet = 5 ;
  Goerli = 6;
  Mumbai = 7;
  Ropsten = 8;
  Ganache = 9;
  Baobab = 10;
  BscTestnet = 11 ;
  ZetaChainTestNet = 12;
  BtcTestNet = 13 ;
}

message Chain {
  ChainName ChainName = 1;
  int64 ChainId = 2;
}